<resources>
    <string name="app_name">Grouppy</string>

    <string name="title_cancel">Cancel</string>
    <string name="title_next">Next</string>
    <string name="title_continue">Continue</string>
    <string name="title_signin">Sign in</string>
    <string name="title_signup">Sign up</string>
    <string name="title_proceed">Proceed</string>
    <string name="title_submit">Submit</string>
    <string name="title_add">Add</string>
    <string name="title_network">Network</string>
    <string name="title_username_email">Username/Email</string>
    <string name="title_password">Password</string>
    <string name="title_name">Full Name</string>
    <string name="title_email">Email</string>
    <string name="title_username">Username</string>
    <string name="title_confirm_password">Confirm Password</string>

    <string name="text_string_grouppy_what">This is the network you use to sign in to Grouppy.</string>

</resources>
