<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_300"
    tools:context="xyz.abhaychauhan.grouppy.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/grouppy_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:text="Grouppy"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_30_sp" />

        <TextView
            android:id="@+id/singup_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_6_dp"
            android:text="Signup"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_22_sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10_dp">

        <EditText
            android:id="@+id/user_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_edit_text_bg"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/title_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/pink_300"
            android:textColorHint="@color/pink_300"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/user_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_edit_text_bg"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/title_email"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/pink_300"
            android:textColorHint="@color/pink_300"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/user_username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_edit_text_bg"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/title_username"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/pink_300"
            android:textColorHint="@color/pink_300"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/user_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_edit_text_bg"
            android:drawableRight="@drawable/ic_eye_open_pink"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/title_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/pink_300"
            android:textColorHint="@color/pink_300"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/user_confirm_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_edit_text_bg"
            android:drawableRight="@drawable/ic_eye_open_pink"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/title_confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/pink_300"
            android:textColorHint="@color/pink_300"
            android:textCursorDrawable="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dimen_10_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_signin_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_5_dp"
            android:layout_weight="1"
            android:background="@drawable/rect_btn_bg_pink"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_10_dp"
            android:paddingTop="@dimen/dimen_10_dp"
            android:text="@string/title_signin"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_20_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_signup_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5_dp"
            android:layout_weight="1"
            android:background="@drawable/rect_btn_bg_pink"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_10_dp"
            android:paddingTop="@dimen/dimen_10_dp"
            android:text="@string/title_signup"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_20_sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
