<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan_600"
    android:id="@+id/signin_layout"
    tools:context="xyz.abhaychauhan.grouppy.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/grouppy_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:text="Grouppy"
            android:textColor="@android:color/white"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/login_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:text="Login to Grouppy"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_22_sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10_dp">

        <EditText
            android:id="@+id/user_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_edit_text_bg"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/title_username_email"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/cyan_600"
            android:textColorHint="@color/cyan_600"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/user_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_edit_text_bg"
            android:drawableRight="@drawable/ic_eye_open_cyan"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/title_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/cyan_600"
            android:textColorHint="@color/cyan_600"
            android:textCursorDrawable="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dimen_10_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_signup_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_5_dp"
            android:layout_weight="1"
            android:background="@drawable/rect_btn_bg_cyan"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_10_dp"
            android:paddingTop="@dimen/dimen_10_dp"
            android:text="@string/title_signup"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_20_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_signin_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5_dp"
            android:layout_weight="1"
            android:background="@drawable/rect_btn_bg_cyan"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_10_dp"
            android:paddingTop="@dimen/dimen_10_dp"
            android:text="@string/title_signin"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_20_sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
