<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_500"
    tools:context="xyz.abhaychauhan.grouppy.NetworkActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen_40_dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/grouppy_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:text="Grouppy"
            android:textColor="@android:color/white"
            android:textSize="60sp"
            android:layout_marginBottom="@dimen/dimen_40_dp"/>

        <EditText
            android:id="@+id/network_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_edit_text_bg"
            android:fontFamily="sans-serif-medium"
            android:hint="Network Name"
            android:padding="20dp"
            android:textColor="@color/teal_500"
            android:textColorHint="@color/teal_500"
            android:textCursorDrawable="@null" />

        <TextView
            android:id="@+id/grouppy_network_what_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/text_string_grouppy_what"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dimen_10_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_5_dp"
            android:layout_weight="1"
            android:background="@drawable/rect_btn_bg"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_10_dp"
            android:paddingTop="@dimen/dimen_10_dp"
            android:text="@string/title_cancel"
            android:textAllCaps="true"
            android:textSize="@dimen/dimen_20_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_next_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5_dp"
            android:layout_weight="1"
            android:background="@drawable/rect_btn_bg"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_10_dp"
            android:paddingTop="@dimen/dimen_10_dp"
            android:text="@string/title_next"
            android:textAllCaps="true"
            android:textSize="@dimen/dimen_20_sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
